# htmx-notifications

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
demo/: asgi.py  models.py  notifications.py  settings.py  urls.py  wsgi.py
demo/static/: main.css  main.js
demo/templates/demo/: _base.html  index.html  send_event.html  toast.html
